language/move-lang/tests/move_check/borrows/borrow_global_mut_invalid.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:6:18
  │
5 │         let r1 = borrow_global_mut<R>(addr);
  │                  -------------------------- It is still being mutably borrowed by this reference
6 │         let r2 = borrow_global_mut<R>(addr);
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:12:18
   │
11 │         let f = &mut borrow_global_mut<R>(addr).f;
   │                 --------------------------------- It is still being mutably borrowed by this reference
12 │         let r2 = borrow_global_mut<R>(addr);
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:18:22
   │
17 │         let r1 = borrow_global_mut<R>(addr);
   │                  -------------------------- It is still being mutably borrowed by this reference
18 │         let f = &mut borrow_global_mut<R>(addr).f;
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:24:18
   │
23 │         let r1 = borrow_global_mut<R>(addr);
   │                  -------------------------- It is still being mutably borrowed by this reference
24 │         let r2 = borrow_global<R>(addr);
   │                  ^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:30:18
   │
29 │         let f = &borrow_global<R>(addr).f;
   │                 ------------------------- It is still being borrowed by this reference
30 │         let r2 = borrow_global_mut<R>(addr);
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:36:18
   │
35 │         let r1 = borrow_global_mut<R>(addr);
   │                  -------------------------- It is still being mutably borrowed by this reference
36 │         let f = &borrow_global_mut<R>(addr).f;
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_global_mut_invalid.move:43:18
   │
42 │         let r1; if (cond) r1 = borrow_global_mut<R>(addr) else r1 = &mut r;
   │                                -------------------------- It is still being mutably borrowed by this reference
43 │         let f = &borrow_global_mut<R>(addr).f;
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

